Added style.css with a sample red color format for replaced words. Now when a “he” is replaced it is also assigned the class “replacement” which can be formatted in css.

--- a/manifest.json
+++ b/manifest.json
@@ -6,12 +6,9 @@
     "version": "1.0",
     "content_scripts": [
         {
-            "matches": [
-                "*://*/*"
-            ],
-            "js": [
-                "content.js"
-            ],
+            "matches": ["*://*/*"],
+            "js": ["content.js"],
+            "css":["style.css"],
             "run_at": "document_end"
         }
     ]
