--- a/manifest.json
+++ b/manifest.json
@@ -3,15 +3,17 @@
   "name": "[sheChromeExtension]",
   "description": "[This extension aims to replace certain male words with their female counterparts.]",
   "version": "1.0",
+  "background": {
+    "persistent": false,
+    "scripts": ["background.js"]
+  },
   "browser_action": {
     "default_popup": "popup.html"
   },
-  "content_scripts": [
-    {
-      "matches":["*://*/*"],
-      "js": ["content.js"],
-      "css":["style.css"],
-      "run_at": "document_end"
-    }
-  ]
+  "content_scripts": [{
+    "matches": ["*://*/*"],
+    "js": ["content.js"],
+    "css": ["style.css"],
+    "run_at": "document_end"
+  }]
 }
