--- a/manifest.json
+++ b/manifest.json
@@ -12,8 +12,11 @@
   },
   "content_scripts": [{
     "matches": ["*://*/*"],
-    "js": ["data/words.js","content.js"],
+    "js": ["data/words.js", "content.js"],
     "css": ["style.css"],
     "run_at": "document_end"
-  }]
+  }],
+  "permissions": [
+    "tabs"
+  ]
 }
