--- a/src/manifest.json
+++ b/src/manifest.json
@@ -5,10 +5,10 @@
   "version": "1.0",
   "background": {
     "persistent": false,
-    "scripts": ["background.js"]
+    "scripts": ["background/script.js"]
   },
   "browser_action": {
-    "default_popup": "popup.html"
+    "default_popup": "pupup/index.html"
   },
   "content_scripts": [{
     "matches": ["*://*/*"],
