--- a/src/manifest.json
+++ b/src/manifest.json
@@ -8,7 +8,7 @@
     "scripts": ["background/script.js"]
   },
   "browser_action": {
-    "default_popup": "pupup/index.html"
+    "default_popup": "popup/index.html"
   },
   "content_scripts": [{
     "matches": ["*://*/*"],
