--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 2,
-  "name": "[sheChromeExtension]",
+  "name": "Make it She",
   "description": "[This extension aims to replace certain male words with their female counterparts.]",
   "version": "1.0",
   "background": {
