--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
     "scripts": ["background.js"]
   },
   "icons": {
-    "120": "icon_off.png"
+    "120": "icon_on.png"
   },
   "browser_action": {
   "default_popup": "popup.html",
